--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion 24
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "com.yguixi.demo_ygx"
-        minSdkVersion 21
+        applicationId "com.yguixi.demo_yguixi"
+        minSdkVersion 18
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
