--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //tab
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.airbnb.android:lottie:1.0.1'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.flyco.roundview:FlycoRoundView_Lib:1.1.2@aar'
+    compile 'com.flyco.tablayout:FlycoTabLayout_Lib:1.5.0@aar'
     testCompile 'junit:junit:4.12'
 }
