--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         </activity>
         <activity android:name=".ui.FirstActivity" />
         <activity android:name=".ui.BaseActivity" />
-        <activity android:name=".tabledemo.TabActivity"></activity>
+        <activity android:name=".tabledemo.TabActivity" />
+        <activity android:name=".ui.PopActivity" />
+        <activity android:name=".ui.DbActivity"></activity>
     </application>
 
 </manifest>
